--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -139,7 +139,7 @@ main {
         min-height: 400px;
         background: url('../../../images/pexels-cotton.jpg');
         position: relative;
-        opacity: 0.9;
+        // opacity: 0.5;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -147,6 +147,15 @@ main {
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: black;
+
+        .overlay{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: rgba(black, 0.6);
+            z-index: 999;
+        }
 
         .parallax-text{
             color:white;
@@ -155,7 +164,7 @@ main {
             width: 70%;
             font-size: 1.5rem;
             font-weight: bold;
-            text-shadow: 1px 1px black;
+            //text-shadow: 1px 1px black;
 
             @include md {
                 padding-block: 1rem;
@@ -168,7 +177,7 @@ main {
     }
 
     .trivia {
-        background: rgba(221,217,231, 0.4);
+        // background: rgba(221,217,231, 0.4);
         padding: 7rem 1rem;
         display:flex;
         justify-content: center;
@@ -215,9 +224,10 @@ main {
 
             p {
                 @include paragraph-style;
+                text-align: justify; 
 
                 @include lg{
-                   text-align: center;
+                //    text-align: center;
                 }
 
                 @include md{
