--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,29 +269,33 @@ main .intro {
 main .parallax {
   margin-top: 4rem;
   min-height: 400px;
-  background: url("../../../images/pexels-cotton.jpg");
   position: relative;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: black; }
+  align-items: center; }
+  main .parallax .parallax-image {
+    background: url("../../../images/pexels-cotton.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    position: absolute; }
   main .parallax .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 999; }
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10; }
   main .parallax .parallax-text {
     color: white;
     text-align: center;
     line-height: 1.5;
     width: 70%;
     font-size: 1.5rem;
-    font-weight: bold; }
+    font-weight: bold;
+    z-index: 9999; }
     @media (max-width: 768px) {
       main .parallax .parallax-text {
         padding-block: 1rem;
