--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'layout/navbar';
 @import 'layout/headerContainer';
 @import 'layout/main';
-@import 'components/form';
 @import 'components/button';
+@import 'components/form';
+@import 'components/calendly';
 @import 'layout/footer';
