--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -183,7 +183,7 @@ main {
     }
 
     .trivia {
-        // background: rgba(221,217,231, 0.4);
+        background: rgba(221,217,231, 0.4);
         padding: 7rem 1rem;
         display:flex;
         justify-content: center;
